# rust-ec2-image-builder-image-ami-id

./: Cargo.toml
src/: main.rs
